--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">iCoder</a>
+        <a class="navbar-brand" href="/illuminati/">iCoder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/iCoderBootstrap/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/illiminati/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
+              <a class="nav-link" href="/illuminati/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -46,7 +46,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a>
+              <a class="nav-link" href="/illuminati/contact.html">Contact Us</a>
             </li>
           </ul>
             <form class="form-inline my-2 my-lg-0">
