--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1">Select your Query</label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Web</option>
-                    <option>Tech Stack</option>
-                    <option>Technology</option>
+                    <option>Related to space</option>
+                    <option>Related to Quantum physics</option>
+                    <option>Related to astronomy</option>
                     <option>Others</option>
                 </select>
             </div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <div class="col-sm-2">Are you a Coder?</div>
+                <div class="col-sm-2">Are you a Scientist?</div>
                 <div class="col-sm-10">
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="gridCheck3">
